ext method for sha1value
Former-commit-id: 15f78d53e21cdf65cdccd910373c1548120dbd08 [formerly e79cb2078f15ecc1d6c9af58ed4cb8158172d10e]
Former-commit-id: 321fc6e9fcbf1779bb44229f6e3085a6fa92dc12

--- a/ExViewer/Controls/AboutControl.xaml
+++ b/ExViewer/Controls/AboutControl.xaml
@@ -53,11 +53,11 @@
                    Margin="4"
                    Style="{StaticResource TitleTextBlockStyle}"
                    Text="AppName" />
-        <TextBlock x:Name="tb_DebugTag"
+        <TextBlock x:Name="tb_VersionInfoTag"
                    x:DeferLoadStrategy="Lazy"
                    Visibility="Collapsed"
                    Style="{StaticResource AboutControlBaseTextBlockStyle}"
-                   Text="DEBUG" />
+                   Text="Debug" />
         <TextBlock x:Name="tb_AppAuthor"
                    Text="AppAuthor"
                    Style="{StaticResource AboutControlBaseTextBlockStyle}" />
