--- a/ExViewer/Views/SearchPage.xaml
+++ b/ExViewer/Views/SearchPage.xaml
@@ -123,10 +123,12 @@
                         <ListView x:Name="lv_AdvancedSearch"
                                   Visibility="{x:Bind ts_Advanced.IsOn, Converter={StaticResource TrueToVisibleConverter}, Mode=OneWay}"
                                   Padding="24,0,0,8"
-                                  Style="{StaticResource StackPanelListViewStyle}">
+                                  Style="{StaticResource StackPanelListViewStyle}"
+                                  MaxWidth="800"
+                                  HorizontalAlignment="Center">
                             <ListView.ItemsPanel>
                                 <ItemsPanelTemplate>
-                                    <wp:WrapPanel Orientation="Horizontal"/>
+                                    <wp:WrapPanel Orientation="Horizontal" />
                                 </ItemsPanelTemplate>
                             </ListView.ItemsPanel>
                             <CheckBox x:Uid="Views/SearchPage/NamesCheckBox"
