Yield everywhere!! It always works!
Former-commit-id: 5da176edb36169db8ccc5d7dd73a7ae04f7a0057 [formerly 431fe2082c88d2f9dc510551978a5c6cf62340ff]
Former-commit-id: 487e764a9e7a2f7b9b773ded28841433ad9b25d6

--- a/ExViewer/Strings/FallbackDictionary.xaml
+++ b/ExViewer/Strings/FallbackDictionary.xaml
@@ -3,6 +3,11 @@
     <!--  neutral  -->
     <!--  Override key-value pairs in this dictionary for language specific properties.  -->
     <x:String x:Key="GuestUserNameString">Guest</x:String>
-    <SolidColorBrush x:Key="VoteUpCommentBrush">#00E639</SolidColorBrush>
+
+    <SolidColorBrush x:Key="VoteUpCommentBrush">#00cc30</SolidColorBrush>
+    <SolidColorBrush x:Key="SlaveVoteUpCommentBrush">#9900cc30</SolidColorBrush>
     <SolidColorBrush x:Key="VoteDownCommentBrush">#FF3333</SolidColorBrush>
+    <SolidColorBrush x:Key="SlaveVoteDownCommentBrush">#99FF3333</SolidColorBrush>
+    <SolidColorBrush x:Key="SlaveCommentBrush"
+                     Color="{ThemeResource SystemBaseMediumColor}" />
 </ResourceDictionary>
