bug fix ; width limit of language selector
Former-commit-id: e788cc62b7a97a154cc779cd182937e80ad72f0e [formerly 41a69dafef6ebd665d36a96f48e7c2abc4d063df]
Former-commit-id: 065c7e3f6f295ed76ba465dc08b728162d914365

--- a/ExViewer/Controls/ExcludedLanguagesSelector.xaml
+++ b/ExViewer/Controls/ExcludedLanguagesSelector.xaml
@@ -7,6 +7,7 @@
              SizeChanged="userControl_SizeChanged"
              HorizontalAlignment="Stretch"
              mc:Ignorable="d"
+             MaxWidth="600"
              d:DesignHeight="300"
              d:DesignWidth="400">
     <UserControl.Resources>
