--- a/ExViewer/Views/SearchPage.xaml
+++ b/ExViewer/Views/SearchPage.xaml
@@ -200,7 +200,7 @@
                                            HorizontalAlignment="Stretch"
                                            TextWrapping="WrapWholeWords"
                                            Margin="8" />
-                                <wp:WrapPanel HorizontalAlignment="Stretch"
+                                <controls:WrapPanel HorizontalAlignment="Stretch"
                                               Margin="12,0">
                                     <TextBlock x:Uid="Views/SearchPage/SearchSimilarTextBlock"
                                                Text="• Similarity scan enabled"
@@ -226,7 +226,7 @@
                                                Text="• Expunged hide"
                                                Style="{StaticResource FileSearchOptionStyle}"
                                                Visibility="{x:Bind VM.FileSearch.SearchExpunged, Converter={StaticResource FalseToVisibleConverter}, Mode=OneWay}" />
-                                </wp:WrapPanel>
+                                </controls:WrapPanel>
                             </StackPanel>
                         </StackPanel>
                     </StackPanel>
