--- a/ExViewer/Views/FileSearchDialog.xaml
+++ b/ExViewer/Views/FileSearchDialog.xaml
@@ -1,4 +1,5 @@
 ﻿<controls:MyContentDialog x:Class="ExViewer.Views.FileSearchDialog"
+                          x:Uid="Views/FileSearchDialog/ContentDialog"
                           xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                           xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                           xmlns:local="using:ExViewer.Views"
@@ -6,21 +7,61 @@
                           xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                           xmlns:controls="using:ExViewer.Controls"
                           mc:Ignorable="d"
+                          Loading="MyContentDialog_Loading"
                           Title="FILE SEARCH"
                           PrimaryButtonText="Search"
                           SecondaryButtonText="Cancel"
                           PrimaryButtonClick="ContentDialog_PrimaryButtonClick"
+                          IsPrimaryButtonEnabled="{x:Bind SearchFile, Mode=OneWay, Converter={StaticResource NullToFalseConverter}}"
                           SecondaryButtonClick="ContentDialog_SecondaryButtonClick">
-    <StackPanel>
+    <controls:MyContentDialog.Resources>
+        <Style x:Key="CheckBoxStyle"
+               TargetType="CheckBox">
+            <Setter Property="Margin"
+                    Value="4,0,12,0" />
+            <Setter Property="MinWidth"
+                    Value="0" />
+        </Style>
+    </controls:MyContentDialog.Resources>
+    <Grid Margin="-4">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="1*" />
+            <ColumnDefinition Width="Auto" />
+        </Grid.ColumnDefinitions>
         <TextBox x:Name="tbFileName"
+                 x:Uid="Views/FileSearchDialog/FileNameTextBox"
                  IsReadOnly="True"
+                 Margin="4"
                  PlaceholderText="Drop a file here..."
                  Text="{x:Bind SearchFile.Name, Mode=OneWay, TargetNullValue='', FallbackValue=''}"
                  AllowDrop="True"
                  DragEnter="tbFileName_DragEnter"
                  Drop="tbFileName_Drop" />
         <Button x:Name="btnBrowse"
+                x:Uid="Views/FileSearchDialog/BrowseButton"
+                Grid.Column="1"
+                Margin="4"
                 Content="Browse..."
                 Click="btnBrowse_Click" />
-    </StackPanel>
+        <controls:WrapPanel Grid.Row="1"
+                            Grid.ColumnSpan="2"
+                            Margin="4">
+            <CheckBox x:Name="cbSimilar"
+                      x:Uid="Views/FileSearchDialog/SimilarCheckBox"
+                      Style="{StaticResource CheckBoxStyle}"
+                      Content="Use similarity scan" />
+            <CheckBox x:Name="cbCover"
+                      x:Uid="Views/FileSearchDialog/CoverCheckBox"
+                      Style="{StaticResource CheckBoxStyle}"
+                      Content="Only search covers" />
+            <CheckBox x:Name="cbExp"
+                      x:Uid="Views/FileSearchDialog/ExpungedCheckBox"
+                      Style="{StaticResource CheckBoxStyle}"
+                      Content="Show expunged galleries" />
+        </controls:WrapPanel>
+    </Grid>
 </controls:MyContentDialog>
