FIX some focus issues
Former-commit-id: c5df68a7afe6d386d66609d8a6cb4726ecc6a329 [formerly 4b8542043fc5ceaa63cf604a09d8626f2149821a]
Former-commit-id: 57728987dafadded597c31e7ec618af1dcff97c9

--- a/ExViewer/Views/FileSearchDialog.xaml
+++ b/ExViewer/Views/FileSearchDialog.xaml
@@ -8,6 +8,7 @@
                           xmlns:controls="using:ExViewer.Controls"
                           mc:Ignorable="d"
                           Loading="MyContentDialog_Loading"
+                          Loaded="MyContentDialog_Loaded"
                           Title="FILE SEARCH"
                           PrimaryButtonText="Search"
                           SecondaryButtonText="Cancel"
