--- a/ExViewer/Controls/AboutControl.xaml
+++ b/ExViewer/Controls/AboutControl.xaml
@@ -237,5 +237,10 @@ M0.1,49.9h1.8l0.8-3.3h2.9L6,45.2H3.1l0.5-2.1h3.1l0.4-1.7h-5L0.1,49.9z M8,49.9l0.
                          x:Uid="Controls/AboutControl/ForumsHyperlinkButton"
                          Content="E-Hentai Forums"
                          NavigateUri="https://forums.e-hentai.org/index.php" />
+        <HyperlinkButton Style="{StaticResource AboutControlHyperLinkButtonStyle}"
+                         x:Uid="Controls/AboutControl/HentaiVerseHyperlinkButton"
+                         x:Name="hlbHV"
+                         Content="HentaiVerse"
+                         NavigateUri="https://hentaiverse.org/" />
     </StackPanel>
 </UserControl>
