--- a/ExViewer/Controls/TagPresenter.xaml
+++ b/ExViewer/Controls/TagPresenter.xaml
@@ -118,25 +118,26 @@
             <TransitionCollection />
         </ListView.ItemContainerTransitions>
         <ListView.Footer>
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition />
-                    <ColumnDefinition Width="Auto" />
-                </Grid.ColumnDefinitions>
-                <Button x:Name="btnStartNew"
+            <Grid Margin="16,0">
+                <Button x:Uid="Controls/TagPresenter/AddNewTagsButton"
+                        x:Name="btnStartNew"
                         Style="{ThemeResource TextBlockButtonStyle}"
-                        Grid.ColumnSpan="2"
                         HorizontalAlignment="Center"
                         Content="Add new tags"
+                        GotFocus="btnStartNew_GotFocus"
                         Click="btnStartNew_Click"
                         Margin="2" />
-                <TextBox x:Name="tbNewTags"
-                         InputScope="AlphanumericHalfWidth"
-                         PlaceholderText="Enter new tags, separated with comma." />
-                <Button x:Name="btnNewTags"
-                        Click="btnNewTags_Click"
-                        Grid.Column="1"
-                        Content="Tag" />
+                <AutoSuggestBox x:Uid="Controls/TagPresenter/AddNewTagsAutoSuggestBox"
+                                x:Name="asbNewTags"
+                                QueryIcon="Tag"
+                                Style="{StaticResource SearchAutoSuggestBoxStyle}"
+                                PlaceholderText="Enter new tags, separated with comma."
+                                LostFocus="asbNewTags_LostFocus"
+                                local:TagSuggestionService.IsEnabled="True"
+                                local:TagSuggestionService.Separator=","
+                                local:TagSuggestionService.UseHistory="False"
+                                local:TagSuggestionService.SubmitCommand="{x:Bind submitCmd}"
+                                VerticalAlignment="Stretch" />
             </Grid>
         </ListView.Footer>
     </ListView>
