--- a/ExViewer/Views/CachedPage.xaml
+++ b/ExViewer/Views/CachedPage.xaml
@@ -27,30 +27,6 @@
     </controls:MyPage.Transitions>
 
     <RelativePanel>
-        <Border Style="{StaticResource TopBarPlaceholderBorderStyle}"
-                Padding="{x:Bind VisibleBoundsThickness, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='x1,48,x1,x0'}"
-                RelativePanel.AlignLeftWithPanel="True"
-                RelativePanel.AlignRightWithPanel="True" />
-        <CommandBar x:Name="cb_top"
-                    Margin="{x:Bind VisibleBoundsThickness, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='x1,x1,x1,x0'}"
-                    RelativePanel.AlignLeftWithPanel="True"
-                    RelativePanel.AlignRightWithPanel="True"
-                    HorizontalContentAlignment="Stretch">
-            <CommandBar.PrimaryCommands>
-                <AppBarButton x:Uid="Views/CachedPage/RefreshAppBarButton"
-                              x:Name="abb_Refresh"
-                              Command="{x:Bind VM.Refresh}"
-                              Icon="Refresh"
-                              Label="Refresh" />
-            </CommandBar.PrimaryCommands>
-            <CommandBar.SecondaryCommands>
-                <AppBarButton x:Uid="Views/CachedPage/DeleteAllAppBarButton"
-                              x:Name="abb_DeleteAll"
-                              Click="abb_DeleteAll_Click"
-                              Icon="Delete"
-                              Label="Delete all" />
-            </CommandBar.SecondaryCommands>
-        </CommandBar>
         <tk:PullToRefreshListView x:Name="lv"
                                   Margin="{x:Bind VisibleBoundsThickness, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='x1,x0'}"
                                   Padding="{x:Bind VisibleBoundsThickness, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='x0,x0,x0,x1'}"
@@ -92,5 +68,30 @@
                            Text="No cached galleries" />
             </tk:PullToRefreshListView.Header>
         </tk:PullToRefreshListView>
+        <Border Style="{StaticResource TopBarPlaceholderBorderStyle}"
+                Padding="{x:Bind VisibleBoundsThickness, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='x1,48,x1,x0'}"
+                RelativePanel.AlignLeftWithPanel="True"
+                RelativePanel.AlignRightWithPanel="True" />
+        <CommandBar x:Name="cb_top"
+                    Margin="{x:Bind VisibleBoundsThickness, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='x1,x1,x1,x0'}"
+                    RelativePanel.AlignLeftWithPanel="True"
+                    RelativePanel.AlignRightWithPanel="True"
+                    HorizontalContentAlignment="Stretch">
+            <CommandBar.PrimaryCommands>
+                <AppBarButton x:Uid="Views/CachedPage/RefreshAppBarButton"
+                              x:Name="abb_Refresh"
+                              Command="{x:Bind VM.Refresh}"
+                              ToolTipService.ToolTip="{x:Bind abb_Refresh.Label}"
+                              Icon="Refresh"
+                              Label="Refresh" />
+            </CommandBar.PrimaryCommands>
+            <CommandBar.SecondaryCommands>
+                <AppBarButton x:Uid="Views/CachedPage/DeleteAllAppBarButton"
+                              x:Name="abb_DeleteAll"
+                              Click="abb_DeleteAll_Click"
+                              Icon="Delete"
+                              Label="Delete all" />
+            </CommandBar.SecondaryCommands>
+        </CommandBar>
     </RelativePanel>
 </controls:MyPage>
