start rewrite gallerypage
Former-commit-id: 79fc1f91a4fb56abd86384592e61b285c152f673 [formerly e93b0cf3cd8a52f54717e61f2185c93994741ef8]
Former-commit-id: 1fd1b583fcbd2f7ae0b8782c680fede4a23aac97

--- a/ExViewer/Controls/TagPresenter.xaml
+++ b/ExViewer/Controls/TagPresenter.xaml
@@ -127,6 +127,7 @@
                         Margin="16,0"
                         QueryIcon="Tag"
                         PlaceholderText="Enter new tags, separated with comma"
+                        Loaded="asbNewTags_Loaded"
                         TextBoxStyle="{StaticResource AutoSuggestBoxTextBoxStyle}"
                         Style="{StaticResource SearchAutoSuggestBoxStyle}"
                         LostFocus="asbNewTags_LostFocus"
